<resources>
    <string name="app_name">Meme App</string>

    //bottom bar
    <string name="home">Community</string>
    <string name="create">Create</string>
    <string name="settings">Settings</string>

    //settings
    <string name="light_themes">Light Themes</string>
    <string name="dark_themes">Dark Themes</string>
    <string name="disable_dark_enable_light">Disable dark themes and enable light themes</string>
    <string name="disable_light_enable_dark">Disable light themes and enable dark themes</string>
    <string name="support_product">Support and donation product</string>
    <string name="support_product_desc">You can help me continue develop product</string>
    <string name="material_you">Material you</string>
    <string name="select_your_color">Select your color</string>

    //donation
    <string name="donation">Donation</string>
    <string name="bank_acc">8968227</string>
    <string name="bank_name">ACB</string>
    <string name="desc_bank_payment">1. Thank you for supporting us during this difficult time. I am very grateful for your kindness, help and generosity. Wish you always happy, healthy and successful.</string>
    <string name="desc_bank_payment_2">2. I don\'t know what to say but my sincere thanks when you get help in difficult times. Thank you very much. Your help is very valuable to me at this time.</string>

    //create
    <string name="video_to_gif">Video To Gif</string>
    <string name="meme_template">Meme Template</string>
    <string name="select_image">Select Image</string>
    <string name="discovery">Discovery</string>
    <string name="preview">Preview</string>
    <string name="export">Export</string>
    <string name="progress">Start the conversion process…</string>
    <string name="select_video">Select video to converter</string>
    <string name="file_size_smaller_than_10mb">Select files smaller than 10 mb</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="time">00:00:00</string>
    <string name="post_to_community">Publish</string>
    <string name="aa">Aa</string>
    <string name="aa_1">[Aa]</string>
    <string name="select_image_to_move">Picker an MemeIcon to Move</string>
    <string name="select_text_to_edit">Picker an Text to edit</string>
    <string name="title">Title</string>
    <string name="description">Geometric sans serif typefaces have been a popular design tool ever since these actors took to the world’s stage. Poppins is one of the new comers to this long tradition. With support for the Devanagari and Latin writing systems, it is an internationalist take on the genre.</string>
    <string name="loading">Loading…</string>
    <string name="align">Align</string>
    <string name="color">Color and font</string>
    <string name="spacing">Spacing</string>
    <string name="bound">Bound</string>

    //deep
    <string name="deep">Deep</string>
    <string name="description_views_1">this posts caught  the community eye</string>

    //home
    <string name="section">Hot</string>
    <string name="sort">Viral</string>
    <string name="window">Day</string>
    <string name="search">Search</string>
    <string name="text_form_image">Text form Image</string>
    <string name="no_internet">Network disconnect? try again</string>
    <string name="retry">retry</string>
    <string name="cant_identify_language">Can\'t identify language.</string>
    <string name="tags">Tags</string>
    <string name="auto_scroll_mes">Scroll after: </string>
    <string name="auto_scroll_mes_second">second</string>
    <string name="community_detail">Community detail</string>
    <string name="number">10.0 K</string>
</resources>