<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llCommunity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_8sdp"
    android:paddingVertical="@dimen/_8sdp"
    android:paddingHorizontal="@dimen/_10sdp"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rycImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rycTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/title"
        android:textSize="@dimen/_13sdp" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_8sdp">

        <com.minhnv.meme_app.utils.IconButton
            android:id="@+id/btnUp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:setIcon="@drawable/ic_button_up"
            app:setText="@string/sort"
            tools:ignore="NestedWeights" />

        <com.minhnv.meme_app.utils.IconButton
            android:id="@+id/btnDown"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_weight="1"
            app:setIcon="@drawable/ic_button_down"
            app:setText="@string/sort" />

        <com.minhnv.meme_app.utils.IconButton
            android:id="@+id/btnSee"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:setIcon="@drawable/ic_button_see"
            app:setText="@string/sort" />
    </LinearLayout>
</LinearLayout>