<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_23sdp"
    tools:context=".ui.main.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/_20sdp">

        <LinearLayout
            android:id="@+id/llChangeThemes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvTitleTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/light_themes"
                    android:textSize="@dimen/_15sdp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSubTitleTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/disable_light_enable_dark"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchThemes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:theme="@style/Widget.Material3.CompoundButton.Switch" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llSupport"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSupportTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/support_product"
                android:textSize="@dimen/_15sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSupportDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/support_product_desc"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/material_you"
                android:textSize="@dimen/_15sdp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_your_color"
                android:textSize="@dimen/_10sdp" />

        </LinearLayout>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/icSelectMaterial1"
                    style="@style/IcMaterial"
                    android:contentDescription="@string/select_your_color"
                    android:src="@drawable/ic_material_color_1" />

                <androidx.legacy.widget.Space android:layout_width="@dimen/_10sdp" />

                <ImageView
                    android:id="@+id/icSelectMaterial2"
                    style="@style/IcMaterial"
                    android:contentDescription="@string/select_your_color"
                    android:src="@drawable/ic_material_color_2" />

                <androidx.legacy.widget.Space android:layout_width="@dimen/_10sdp" />


                <ImageView
                    android:id="@+id/icSelectMaterial3"
                    style="@style/IcMaterial"
                    android:contentDescription="@string/select_your_color"
                    android:src="@drawable/ic_material_color_3" />

                <androidx.legacy.widget.Space android:layout_width="@dimen/_10sdp" />


                <ImageView
                    android:id="@+id/icSelectMaterial4"
                    style="@style/IcMaterial"
                    android:contentDescription="@string/select_your_color"
                    android:src="@drawable/ic_material_color_4" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/icSelectMaterial5"
                    style="@style/IcMaterial"
                    android:contentDescription="@string/select_your_color"
                    android:src="@drawable/ic_material_color_5" />

                <androidx.legacy.widget.Space android:layout_width="@dimen/_10sdp" />


                <ImageView
                    android:id="@+id/icSelectMaterial6"
                    style="@style/IcMaterial"
                    android:contentDescription="@string/select_your_color"
                    android:src="@drawable/ic_material_color_6" />

                <androidx.legacy.widget.Space android:layout_width="@dimen/_10sdp" />


                <ImageView
                    android:id="@+id/icSelectMaterial7"
                    style="@style/IcMaterial"
                    android:contentDescription="@string/select_your_color"
                    android:src="@drawable/ic_material_color_7" />

                <androidx.legacy.widget.Space android:layout_width="@dimen/_10sdp" />

                <ImageView
                    android:id="@+id/icSelectMaterial8"
                    style="@style/IcMaterial"
                    android:contentDescription="@string/select_your_color"
                    android:src="@drawable/ic_material_color_8" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/icSelectMaterial9"
                    style="@style/IcMaterial"
                    android:contentDescription="@string/select_your_color"
                    android:src="@drawable/ic_material_color_9" />

                <androidx.legacy.widget.Space android:layout_width="@dimen/_10sdp" />

                <ImageView
                    android:id="@+id/icSelectMaterial10"
                    style="@style/IcMaterial"
                    android:contentDescription="@string/select_your_color"
                    android:src="@drawable/ic_material_color_10" />

                <androidx.legacy.widget.Space android:layout_width="@dimen/_10sdp" />

                <ImageView
                    android:id="@+id/icSelectMaterial11"
                    style="@style/IcMaterial"
                    android:contentDescription="@string/select_your_color"
                    android:src="@drawable/ic_material_color_11" />

                <androidx.legacy.widget.Space android:layout_width="@dimen/_10sdp" />

                <ImageView
                    android:id="@+id/icSelectMaterial12"
                    style="@style/IcMaterial"
                    android:contentDescription="@string/select_your_color"
                    android:src="@drawable/ic_material_color_12" />
            </TableRow>
        </TableLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>